_content: make "Press Esc to move out of the editor" message stop flickering
It's distracting to have this "Press Esc to move out of the editor"
message flicker on and off as focus shifts around the pages, especially
since it moves everything else up and down.

Make the message permanent and unobtrusive instead.

Reviewed-on: https://go-review.googlesource.com/c/website/+/517695
Run-TryBot: Russ Cox <rsc@golang.org>
TryBot-Result: Gopher Robot <gobot@golang.org>

--- a/_content/css/styles.css
+++ b/_content/css/styles.css
@@ -4591,7 +4591,7 @@ a.error {
   height: 100%;
   border: none;
   outline: none;
-  padding: 0.625rem 0.625rem 0 0.625rem;
+  padding: 0 0.625rem 0 0.625rem;
   min-height: 13rem;
   resize: none;
 }
@@ -4625,8 +4625,7 @@ a.error {
   background-color: var(--color-background-playground-input) !important;
 }
 .Playground-outputContainer,
-.Playground-output,
-.Playground-preContainer {
+.Playground-output {
   background: var(--color-background-code);
 }
 .Playground-inputContainer,
@@ -4641,13 +4640,9 @@ a.error {
   resize: vertical;
 }
 .Playground-preContainer {
-  border-bottom: var(--border-code);
-}
-.Playground-preContainer {
-  display: none;
-}
-.Playground-input:focus + .Playground-preContainer {
-  display: block;
+  font-size: 0.8em;
+  font-style: italic;
+  padding: 0.3rem 0 0.3rem 0.625rem;
 }
 .Playground-controls {
   display: flex;
